--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
   "dependencies": {
     "electron": "^27.1.2",
     "express": "^4.18.2",
+    "monaco-editor": "^0.44.0",
     "node-pty": "^0.10.1",
     "xterm": "^4.19.0",
     "xterm-addon-fit": "^0.5.0",
     "xterm-addon-search": "^0.8.2",
-    "xterm-addon-web-links": "^0.6.0",
-    "monaco-editor": "^0.44.0"
+    "xterm-addon-web-links": "^0.6.0"
   },
   "devDependencies": {
     "electron-builder": "^23.6.0",
-    "jest": "^29.7.0",
     "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0"
   },
   "build": {
