--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "xterm-addon-web-links": "^0.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "electron-builder": "^23.6.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
